
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_8__ {int intvalue; int string; } ;
typedef TYPE_1__ token_t ;
typedef int source_t ;
struct TYPE_9__ {int index; int value; struct TYPE_9__* next; struct TYPE_9__* child; scalar_t__ weight; } ;
typedef TYPE_2__ fuzzyseperator_t ;


 int FreeFuzzySeperators_r (TYPE_2__*) ;
 scalar_t__ GetClearedMemory (int) ;
 void* MAX_INVENTORYVALUE ;
 int PC_ExpectAnyToken (int *,TYPE_1__*) ;
 int PC_ExpectTokenString (int *,char*) ;
 int PC_ExpectTokenType (int *,int ,int ,TYPE_1__*) ;
 int ReadFuzzyWeight (int *,TYPE_2__*) ;
 int SourceError (int *,char*,...) ;
 int SourceWarning (int *,char*) ;
 int TT_INTEGER ;
 int TT_NUMBER ;
 int qfalse ;
 int qtrue ;
 scalar_t__ strcmp (int ,char*) ;

fuzzyseperator_t *ReadFuzzySeperators_r(source_t *source)
{
 int newindent, index, def, founddefault;
 token_t token;
 fuzzyseperator_t *fs, *lastfs, *firstfs;

 founddefault = qfalse;
 firstfs = ((void*)0);
 lastfs = ((void*)0);
 if (!PC_ExpectTokenString(source, "(")) return ((void*)0);
 if (!PC_ExpectTokenType(source, TT_NUMBER, TT_INTEGER, &token)) return ((void*)0);
 index = token.intvalue;
 if (!PC_ExpectTokenString(source, ")")) return ((void*)0);
 if (!PC_ExpectTokenString(source, "{")) return ((void*)0);
 if (!PC_ExpectAnyToken(source, &token)) return ((void*)0);
 do
 {
  def = !strcmp(token.string, "default");
  if (def || !strcmp(token.string, "case"))
  {
   fs = (fuzzyseperator_t *) GetClearedMemory(sizeof(fuzzyseperator_t));
   fs->index = index;
   if (lastfs) lastfs->next = fs;
   else firstfs = fs;
   lastfs = fs;
   if (def)
   {
    if (founddefault)
    {
     SourceError(source, "switch already has a default");
     FreeFuzzySeperators_r(firstfs);
     return ((void*)0);
    }
    fs->value = MAX_INVENTORYVALUE;
    founddefault = qtrue;
   }
   else
   {
    if (!PC_ExpectTokenType(source, TT_NUMBER, TT_INTEGER, &token))
    {
     FreeFuzzySeperators_r(firstfs);
     return ((void*)0);
    }
    fs->value = token.intvalue;
   }
   if (!PC_ExpectTokenString(source, ":") || !PC_ExpectAnyToken(source, &token))
   {
    FreeFuzzySeperators_r(firstfs);
    return ((void*)0);
   }
   newindent = qfalse;
   if (!strcmp(token.string, "{"))
   {
    newindent = qtrue;
    if (!PC_ExpectAnyToken(source, &token))
    {
     FreeFuzzySeperators_r(firstfs);
     return ((void*)0);
    }
   }
   if (!strcmp(token.string, "return"))
   {
    if (!ReadFuzzyWeight(source, fs))
    {
     FreeFuzzySeperators_r(firstfs);
     return ((void*)0);
    }
   }
   else if (!strcmp(token.string, "switch"))
   {
    fs->child = ReadFuzzySeperators_r(source);
    if (!fs->child)
    {
     FreeFuzzySeperators_r(firstfs);
     return ((void*)0);
    }
   }
   else
   {
    SourceError(source, "invalid name %s", token.string);
    return ((void*)0);
   }
   if (newindent)
   {
    if (!PC_ExpectTokenString(source, "}"))
    {
     FreeFuzzySeperators_r(firstfs);
     return ((void*)0);
    }
   }
  }
  else
  {
   FreeFuzzySeperators_r(firstfs);
   SourceError(source, "invalid name %s", token.string);
   return ((void*)0);
  }
  if (!PC_ExpectAnyToken(source, &token))
  {
   FreeFuzzySeperators_r(firstfs);
   return ((void*)0);
  }
 } while(strcmp(token.string, "}"));

 if (!founddefault)
 {
  SourceWarning(source, "switch without default");
  fs = (fuzzyseperator_t *) GetClearedMemory(sizeof(fuzzyseperator_t));
  fs->index = index;
  fs->value = MAX_INVENTORYVALUE;
  fs->weight = 0;
  fs->next = ((void*)0);
  fs->child = ((void*)0);
  if (lastfs) lastfs->next = fs;
  else firstfs = fs;
 }

 return firstfs;
}
